Próximo passo: criar uma última camada, contendo apenas um nó T.

--- a/LBI.ipynb
+++ b/LBI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPdCTWKay+IXUYTwVFDce9p",
+      "authorship_tag": "ABX9TyN8RzEzheOBkjIS7Oh5Oj/O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# LIBs Utilizadas"
+      ],
+      "metadata": {
+        "id": "wasgdlfY8GTO"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {
@@ -43,19 +52,30 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Definição das Variáveis do Problema"
+      ],
+      "metadata": {
+        "id": "32qpaMUG8LPP"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Variáveis Globais do Problema\n",
         "global var, lista_pesos, lista_pesos_restr, capacidade\n",
+        "# QTDE de variáveis do problema\n",
         "var = int(input('Diga-me quantas variavéis de decisão possui seu problema da mochila 0-1: '))\n",
-        "lista_pesos = []\n",
+        "lista_pesos = [] # Pesos das variáveis na função objetivo\n",
         "for i in range(var):\n",
         "  peso = int(input(f'Informe o peso da variável x{i + 1} na função objetivo: '))\n",
         "  lista_pesos.append(peso)\n",
-        "lista_pesos_restr = []\n",
+        "lista_pesos_restr = [] # Pesos das variáveis na restrição\n",
         "for i in range(var):\n",
         "  peso_restr = int(input(f'Informe o peso da variável x{i + 1} na restrição: '))\n",
         "  lista_pesos_restr.append(peso_restr)\n",
+        "# Capacidade da Mochila\n",
         "capacidade = int(input('Informe a capacidade da mochila: '))"
       ],
       "metadata": {
@@ -86,15 +106,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Função de Transição"
+      ],
+      "metadata": {
+        "id": "OydNxO6S8Rt6"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Função de transição entre um estado e outro.\n",
         "def funcao_tran(estado, xi, i):\n",
         "  valor_estado = estado + xi * lista_pesos_restr[i]\n",
         "  if valor_estado <= capacidade: return True, valor_estado\n",
-        "  return False, 0\n",
-        "\n",
-        "def ve"
+        "  return False, 0\n"
       ],
       "metadata": {
         "id": "Al9awp5gB36w"
@@ -103,14 +130,23 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Classe que Define um Nó do Grafo"
+      ],
+      "metadata": {
+        "id": "wjzIue3g8WKG"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Objeto Nó do Grafo\n",
         "class No:\n",
         "  def __init__(self, estado, id):\n",
-        "    self.estado = estado\n",
-        "    self.id = id\n",
-        "    self.pai = None\n",
+        "    self.estado = estado  # Estado\n",
+        "    self.id = id          # Identificação\n",
+        "    self.pai = None       # Pai do Nó\n",
         "  def __str__(self):\n",
         "    return f'{self.estado}'\n",
         "  def __repr__(self) -> str:\n",
@@ -123,15 +159,24 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Algoritmo para a Visualização do Diagrama de Decisão"
+      ],
+      "metadata": {
+        "id": "ZS7C7hPj8dHU"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Algoritmo propriamente dito\n",
-        "grafo = gp.Digraph(comment = 'DD')\n",
-        "raiz = No(0, '0')\n",
+        "grafo = gp.Digraph(comment = 'DD') # Objeto Diagrama de Decisão\n",
+        "raiz = No(0, '0')                  # Raiz do grafo\n",
         "grafo.node('0')\n",
-        "Lista_camadas = [[raiz]]\n",
+        "Lista_camadas = [[raiz]]           # Lista de Camadas do Diagrama\n",
         "dominio = [0, 1]\n",
-        "lista_edges = []\n",
+        "lista_edges = []                   # Domínio das variáveis\n",
         "id = 1\n",
         "for i in range(0, var):\n",
         "  lj = list()\n",
@@ -154,6 +199,7 @@
         "        grafo.edge(j.id, lj[index].id)\n",
         "  Lista_camadas.append(lj)\n",
         "\n",
+        "# Plot do Diagrama de Decisão\n",
         "filename = grafo.render(filename = 'graph', format = 'png', view = False)\n",
         "Image(filename)\n"
       ],
